--- a/css/styles.css
+++ b/css/styles.css
@@ -496,13 +496,12 @@ body {
     padding: 5px 10px;
     margin: 0 5px;
     cursor: pointer;
-    border-radius: 5px;
     color: var(--text-color);
     font-size: 24px;
 }
 
 .page.active {
-    color: #7A481A;
+    color: #955922;
 }
 
 .pricing {
